- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P3: Somewhat important
 - 
    Qt Creator 16.0.0-rc1
 - 
    Ubuntu 24.04 LTS
Gnome 46 
- 
        5b70711fd (16.0)
 
- Run Qt Creator in Gnome.
I didn't test this with other desktops. - Open Creator's Terminal view (Alt+5).
 - Generate enough output to make the terminal scroll vertically.
 - Scroll up the terminal.
Of course, the input line goes out of view. - Press Ctrl+Alt+Right to show a different virtual desktop.
 - Press Ctrl+Alt+Left to return to the previous desktop.
Expected: Creator still looks as it did before.
Actual: The Terminal scrolled down to the input line. 
- resulted from
 - 
                    
QTCREATORBUG-32407 Terminal does not scroll input line into view
-         
 - Closed
 
 -         
 
- mentioned in
 - 
                    
Page Loading...
 
| For Gerrit Dashboard: QTCREATORBUG-32546 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 627688,3 | Terminal: Ignore empty InputMethodEvents | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |