Terminal: Ignore empty InputMethodEvents

Fixes: QTCREATORBUG-32546
Change-Id: I943f5ac1b3703e18bc3cd4ad89d64a4d99e25698
Reviewed-by: Cristian Adam <cristian.adam@qt.io>